Attempted fix to form size on ios to make it 1.5x full screen height

--- a/styles.css
+++ b/styles.css
@@ -417,7 +417,7 @@ h3.primary{
     z-index: 1;
 
     @media only screen and (max-width: 768px) {
-        height: 180vh;
-        min-height: 180vh;
+        height: 135vh;
+        min-height: 135vh;
     }
 }
